@@ -17,6 +17,7 @@
 	mysql : added result_set_conv_string/result_set_conv_bytes
 	mysql : added support for BINARY(size) type
 	vm : keep stack infos for object/array ops (interp)
+	std : added thread_stack
 
 2009-07-26 : 1.8.1
 	nekoc : small fix in evaluation of using jump tables for switch on integers
